<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svaq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400"
    tools:context=".AddQuestions">

    <TextView
        android:id="@+id/createQuizText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/create_quiz"
        android:textColor="#070707"
        android:textSize="45sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionCreateNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_round_shape"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createQuizText2" />

    <EditText
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/question"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/questionCreateNumber" />

    <EditText
        android:id="@+id/option1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/option_1"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/question" />

    <EditText
        android:id="@+id/option2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/option_2"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option1" />
    <EditText
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/option_3"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2" />
    <EditText
        android:id="@+id/option4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/option_4"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3" />

    <EditText
        android:id="@+id/correctOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@drawable/edit_text_round_shape"
        android:hint="@string/correct_option_eg_1_2_3_4"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option4" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correctOption"
        tools:ignore="DuplicateSpeakableTextCheck"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:text="@string/back"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correctOption"
        tools:ignore="DuplicateSpeakableTextCheck"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>