<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_400"
    tools:context=".CreateQuiz">

    <TextView
        android:id="@+id/createQuizText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/create_quiz"
        android:textColor="#070707"
        android:textSize="45sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/quizName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:inputType="text"
        android:background="@android:color/transparent"
        android:hint="Name of Quiz"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createQuizText" />

    <EditText
        android:id="@+id/noOfQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:inputType="number"
        android:background="@android:color/transparent"
        android:hint="@string/number_of_questions"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quizName" />

    <EditText
        android:id="@+id/timeLimit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/time_limit"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noOfQuestions" />

    <TextView
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/date_of_quiz"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeLimit" />

    <TextView
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/time_to_start"
        android:minHeight="48dp"
        android:textColorHint="#B0BEC5"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePicker" />

    <Button
        android:id="@+id/addQuestionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:text="@string/add_questions"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        tools:ignore="DuplicateSpeakableTextCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>